# NeuralNetworkXOR

./: Connection.cpp  Connection.h  Layer.cpp  Layer.h  Makefile  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkXOR.vcxproj  NeuralNetworkXOR.vcxproj.filters  Node.cpp  Node.h  README.md  build.sh  buildConsole.sh  buildCore.sh  include.h  main.cpp  run.sh
NeuralNetworkConsole/: CMakeLists.txt
NeuralNetworkConsole/include/: include.h
NeuralNetworkConsole/src/: CLA.cpp  main.cpp
NeuralNetworkCore/: CMakeLists.txt
NeuralNetworkCore/include/: Layer.h  include.h
NeuralNetworkCore/src/: NeuralNetwork.cpp  Node.cpp
brAIn/: CMakeLists.txt  build.sh
brAIn/include/: Globals.h  NeuralNetwork.h  include.h
brAIn/src/: Connection.cpp
brAInConsole/: CMakeLists.txt  build.sh
brAInConsole/include/: CLA.h
src/: CLA.cpp  CLA.h  Globals.h  NeuralNetwork.cpp  Node.h  include.h  main.cpp
