CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

PROJECT(brAIn VERSION 1.0.1 DESCRIPTION "brAIn core library")

set(CMAKE_CXX_STANDARD 14)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")

SET(CMAKE_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)
SET(CMAKE_BINARY_DIR ${PROJECT_SOURCE_DIR}/bin)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}
  ${PROJECT_SOURCE_DIR}/include
)

ADD_LIBRARY(brain SHARED
  src/Connection.cpp
  src/Layer.cpp
  src/NeuralNetwork.cpp
  src/Node.cpp
)

SET_TARGET_PROPERTIES(brain PROPERTIES
  PREFIX "l"
  VERSION ${PROJECT_VERSION}
)
