CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

PROJECT(brAInConsole VERSION 1.0.1 DESCRIPTION "brAIn console application")

set(CMAKE_CXX_STANDARD 14)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")

SET(CMAKE_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)
SET(CMAKE_BINARY_DIR ${PROJECT_SOURCE_DIR}/bin)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

SET(CORE_INCLUDE "${PROJECT_SOURCE_DIR}/../brAIn/include")
SET(CORE_LIB "${PROJECT_SOURCE_DIR}/../brAIn/bin/lbrain.so")

FIND_PACKAGE(Boost 1.62
  COMPONENTS program_options
  REQUIRED
)

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}
  ${PROJECT_SOURCE_DIR}/include
  ${CORE_INCLUDE}
)

ADD_EXECUTABLE(brain
  src/CLA.cpp
  src/main.cpp
)

TARGET_LINK_LIBRARIES(brain
  ${CORE_LIB}
  ${Boost_LIBRARIES}
)
